# mic_aggregator_demo

./: .gitmodules  CMakeLists.txt  README.md
app_mic_aggregator/: CMakeLists.txt  lib_xua.cmake
app_mic_aggregator/src/: XCORE-AI-EXPLORER.xn  app_config.h  app_decimator.hpp  app_main.c  app_main.h  decimator_subtask.c  fixed_gain.c  fixed_gain.h  i2c_control.c  main.xc  mic_array_48k_decimator_coeffs.h  mic_array_wrapper.cpp  tdm_master_simple.c  tdm_master_simple.h  tdm_slave_wrapper.c  xua_conf.h  xua_wrapper.c  xua_wrapper.h
python/: vcd2wav.py
